--- a/index.html
+++ b/index.html
@@ -310,15 +310,17 @@
         </div>
         <!-- 超实惠 -->
         <div class="col-xs-12">
-              <a class="wapsy clear-margin"href="javascript:;"><img src="./image/146474789821675732.png" alt=""></a>
+          <div class="row">
+              <a class="wapsy adapt"href="javascript:;"><img src="./image/146474789821675732.png" alt=""></a>
         </div>
+      </div>
         <div class="col-xs-6">
           <div class="clear-margin sh-inner sh-left">
             <div class="vertical"></div>
-            <a href="javascript:;">
+            <a href="javascript:;"class="adapt">
               <img src="./image/146486180644326965.webp" alt="">
             </a>
-            <a href="javascript:;">
+            <a href="javascript:;"class="adapt">
               <img src="./image/146483483995436444.webp" alt="">
             </a>
           </div>
@@ -326,13 +328,13 @@
         <div class="col-xs-6">
           <div class="clear-margin sh-inner sh-right">
 
-            <a href="javascript:;">
+            <a href="javascript:;"class="adapt">
               <img src="./image/146486696666593778.webp" alt="">
             </a>
-            <a href="javascript:;">
+            <a href="javascript:;"class="adapt">
               <img src="./image/146476963340594424.webp" alt="">
             </a>
-            <a href="javascript:;">
+            <a href="javascript:;"class="adapt">
               <img src="./image/146477168506364268.webp" alt="">
             </a>
           </div>
@@ -340,9 +342,311 @@
         <!-- 生活家 -->
         <div class="col-xs-12">
           <div class="row">
-              <a class="shj"href="javascript:;"><img src="./image/146474791863958135.png" alt=""></a>
+              <a class="adapt shj" href="javascript:;"><img src="./image/146474791863958135.png" alt=""></a>
           </div>
         </div>
+        <div class="col-xs-6">
+          <div class="row">
+            <div class="vertical"></div>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146485015699362716.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="row">
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146485092297415888.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="row">
+            <div class="vertical"></div>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146485158303965462.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="row">
+            <div class="vertical"></div>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146478082215898684.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="row">
+            <div class="vertical"></div>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146478074998506772.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="row">
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146478078448689353.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <!-- 好品质 -->
+        <div class="col-xs-12">
+          <div class="row">
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146474793384457955.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="row">
+            <div class="vertical"></div>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146486753720138717.webp" alt="">
+            </a>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146483459865351558.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="row">
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146477175732114475.webp" alt="">
+            </a>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146486849161630718.webp" alt="">
+            </a>
+            <a href="javascript:;" class="adapt">
+              <img src="./image/146486088914974212.webp" alt="">
+            </a>
+          </div>
+        </div>
+        <!-- banner -->
+        <div class="v5-swipe-banner v5-swipe">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="javascript:;"><img src="./image/146483366391586873.webp" alt=""></a></div>
+            <div class="swiper-slide"><a href="javascript:;"><img src="./image/146485982602933346.jpg" alt=""></a></div>
+            <div class="swiper-slide"><a href="javascript:;"><img src="./image/146483433308857388.jpg" alt=""></a></div>
+          </div>
+          <!-- 如果需要分页器 -->
+          <div class="swiper-pagination" id="v5-banner-pagination">
+          </div>
+        </div>
+         <!-- 特色好货 -->
+        <div class="col-xs-12">
+          <div class="row">
+            <a href="javascript;;" class="adapt v5-swipe"><img src="./image/146474795182911867.png" alt=""></a>
+          </div>
+        </div>
+        <div class="tshh-container">
+           <div class="col-xs-4">
+             <div class="row">
+               <div class="vertical"></div>
+               <a href="javascript;;" class="adapt"><img src="./image/146477928757228773.webp" alt=""></a>
+             </div>
+           </div>
+           <div class="col-xs-4">
+             <div class="row">
+               <div class="vertical"></div>
+               <a href="javascript;;" class="adapt"><img src="./image/146477185308378723.webp" alt=""></a>
+             </div>
+           </div>
+           <div class="col-xs-4">
+             <div class="row">
+               <a href="javascript;;" class="adapt"><img src="./image/146483271904331802.webp" alt=""></a>
+             </div>
+           </div>
+           <div class="col-xs-4">
+             <div class="row">
+               <div class="vertical"></div>
+               <a href="javascript;;" class="adapt"><img src="./image/146477188230301162.webp" alt=""></a>
+             </div>
+           </div>
+           <div class="col-xs-4">
+             <div class="row">
+               <div class="vertical"></div>
+               <a href="javascript;;" class="adapt"><img src="./image/146477190883352502.webp" alt=""></a>
+             </div>
+           </div>
+           <div class="col-xs-4">
+             <div class="row">
+               <a href="javascript;;" class="adapt"><img src="./image/146476642306653678.webp" alt=""></a>
+             </div>
+           </div>
+       </div>
+       <div class="v5-swipe-banner v5-swipe">
+         <div class="swiper-wrapper">
+           <div class="swiper-slide"><a href="javascript:;"><img src="./image/146485006139902912.webp" alt=""></a></div>
+           <div class="swiper-slide"><a href="javascript:;"><img src="./image/146486048401018185.jpg" alt=""></a></div>
+         </div>
+         <!-- 如果需要分页器 -->
+         <div class="swiper-pagination" id="v5-banner-pagination">
+         </div>
+       </div>
+       <!-- 热门市场 -->
+       <div class="rmsc">
+         <div class="col-xs-12">
+           <div class="row">
+             <a href="javascript:;" class="adapt  v5-swipe">
+               <img src="./image/146485176043223724.jpg" alt="">
+             </a>
+           </div>
+         </div>
+         <div class="col-xs-6">
+           <div class="row">
+             <a href="javascript:;" class="adapt">
+               <img src="./image/146492334764326827.jpg" alt="">
+             </a>
+           </div>
+         </div>
+         <div class="col-xs-6">
+           <div class="row">
+             <a href="javascript:;" class="adapt">
+               <img src="./image/146478163893312491.webp" alt="">
+             </a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146486295835027264.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146485102160316618.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <a href="javascript:;" class="adapt"><img src="./image/146485391262808100.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146486600356041331.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146478198096395526.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <a href="javascript:;" class="adapt"><img src="./image/146491562899095177.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146478202340545625.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146482997374321371.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <a href="javascript:;" class="adapt"><img src="./image/146483939059634752.webp"></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146485280837456423.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt"><img src="./image/146485296925423697.webp" alt=""></a>
+           </div>
+         </div>
+         <div class="col-xs-4">
+           <div class="row">
+             <a href="javascript:;" class="adapt"><img src="./image/146486744435374014.webp"></a>
+           </div>
+         </div>
+         <div class="col-xs-12">
+           <div class="row">
+             <a href="javascript:;" class="adapt  v5-swipe">
+               <img src="./image/146474802844166136.png" alt="">
+             </a>
+           </div>
+         </div>
+         <div class="col-xs-6">
+           <div class="row">
+             <div class="vertical"></div>
+             <a href="javascript:;" class="adapt  ">
+               <img src="./image/146477267426833564.webp">
+             </a>
+           </div>
+         </div>
+         <div class="col-xs-6">
+           <div class="row">
+             <div class="col-xs-12">
+               <div class="row">
+                 <a href="javascript:;" class="adapt">
+                   <img src="./image/146477269409624526.webp" alt="">
+                 </a>
+               </div>
+             </div>
+             <div class="col-xs-12">
+               <div class="row">
+                 <a href="javascript:;" class="adapt">
+                   <img src="./image/146477271383353597.webp" alt="">
+                 </a>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div class="col-xs-12">
+           <div class="row">
+             <a href="javascript:;" class="adapt  ">
+               <img src="./image/146474824737388916.png" alt="">
+             </a>
+           </div>
+         </div>
+         <div class="v5-swipe-banner">
+           <div class="swiper-wrapper">
+             <div class="swiper-slide">
+               <div class="col-xs-6">
+                 <a href="javascript:;" class="adapt">
+                   <div class="t">
+                     <img src="./image/145916362399792633.webp" alt="" class="opa1">
+                     <div class="wrap">
+                       <span>家装慧</span>
+                       <span class="des">有家有滋味</span>
+                     </div>
+                   </div>
+                   <div class="hor-view">
+                     <div class="b1">
+                       <img src="./image/000000000108286545_1_400x400.webp" alt="">
+                     </div>
+                     <div class="b2">
+                       <img src="./image/000000000128258974_1_200x200.webp" alt="">
+                       <img src="./image/000000000109311908_1_200x200.webp" alt="">
+                     </div>
+                   </div>
+                 </a>
+               </div>
+             </div>
+             <div class="swiper-slide"><a href="javascript:;"><img src="./image/146486048401018185.jpg" alt=""></a></div>
+           </div>
+           <!-- 如果需要分页器 -->
+           <div class="swiper-pagination" id="v5-banner-pagination">
+           </div>
+         </div>
+       </div>
       </div>
     </div>
   </div>
