--- a/index.html
+++ b/index.html
@@ -620,7 +620,27 @@
            <div class="swiper-wrapper">
              <div class="swiper-slide">
                <div class="col-xs-6">
-                 <a href="javascript:;" class="adapt">
+                 <a href="javascript:;" class="row-a row">
+                   <div class="t">
+                     <img src="./image/145916362399792633.webp" alt="" class="opa1">
+                     <div class="wrap">
+                       <span>家装慧</span>
+                       <span class="des">有家有滋味</span>
+                     </div>
+                   </div>
+                   <div class="hor-view">
+                     <div class="b1">
+                       <img src="./image/000000000108286545_1_400x400.webp" alt="">
+                     </div>
+                     <div class="b2">
+                       <img src="./image/000000000128258974_1_200x200.webp" alt="">
+                       <img src="./image/000000000109311908_1_200x200.webp" alt="">
+                     </div>
+                   </div>
+                 </a>
+               </div>
+               <div class="col-xs-6">
+                 <a href="javascript:;" class="adapt row-a row">
                    <div class="t">
                      <img src="./image/145916362399792633.webp" alt="" class="opa1">
                      <div class="wrap">
@@ -640,10 +660,51 @@
                  </a>
                </div>
              </div>
-             <div class="swiper-slide"><a href="javascript:;"><img src="./image/146486048401018185.jpg" alt=""></a></div>
+             <div class="swiper-slide">
+               <div class="col-xs-6">
+                 <a href="javascript:;" class="row-a row">
+                   <div class="t">
+                     <img src="./image/145916362399792633.webp" alt="" class="opa1">
+                     <div class="wrap">
+                       <span>家装慧</span>
+                       <span class="des">有家有滋味</span>
+                     </div>
+                   </div>
+                   <div class="hor-view">
+                     <div class="b1">
+                       <img src="./image/000000000108286545_1_400x400.webp" alt="">
+                     </div>
+                     <div class="b2">
+                       <img src="./image/000000000128258974_1_200x200.webp" alt="">
+                       <img src="./image/000000000109311908_1_200x200.webp" alt="">
+                     </div>
+                   </div>
+                 </a>
+               </div>
+               <div class="col-xs-6">
+                 <a href="javascript:;" class="adapt row-a row">
+                   <div class="t">
+                     <img src="./image/145916362399792633.webp" alt="" class="opa1">
+                     <div class="wrap">
+                       <span>家装慧</span>
+                       <span class="des">有家有滋味</span>
+                     </div>
+                   </div>
+                   <div class="hor-view">
+                     <div class="b1">
+                       <img src="./image/000000000108286545_1_400x400.webp" alt="">
+                     </div>
+                     <div class="b2">
+                       <img src="./image/000000000128258974_1_200x200.webp" alt="">
+                       <img src="./image/000000000109311908_1_200x200.webp" alt="">
+                     </div>
+                   </div>
+                 </a>
+               </div>
+             </div>
            </div>
            <!-- 如果需要分页器 -->
-           <div class="swiper-pagination" id="v5-banner-pagination">
+           <div class="swiper-pagination" id="v6-banner-pagination">
            </div>
          </div>
        </div>
