--- a/index.html
+++ b/index.html
@@ -619,8 +619,9 @@
          <div class="v5-swipe-banner">
            <div class="swiper-wrapper">
              <div class="swiper-slide">
-               <div class="col-xs-6">
-                 <a href="javascript:;" class="row-a row">
+               <div class="swiper-inner">
+               <div class="swiper-col-inner">
+                 <a href="javascript:;">
                    <div class="t">
                      <img src="./image/145916362399792633.webp" alt="" class="opa1">
                      <div class="wrap">
@@ -639,8 +640,8 @@
                    </div>
                  </a>
                </div>
-               <div class="col-xs-6">
-                 <a href="javascript:;" class="adapt row-a row">
+               <div class="swiper-col-inner">
+                 <a href="javascript:;">
                    <div class="t">
                      <img src="./image/145916362399792633.webp" alt="" class="opa1">
                      <div class="wrap">
@@ -658,11 +659,13 @@
                      </div>
                    </div>
                  </a>
+               </div>
                </div>
              </div>
              <div class="swiper-slide">
-               <div class="col-xs-6">
-                 <a href="javascript:;" class="row-a row">
+               <div class="swiper-inner">
+               <div class="swiper-col-inner">
+                 <a href="javascript:;">
                    <div class="t">
                      <img src="./image/145916362399792633.webp" alt="" class="opa1">
                      <div class="wrap">
@@ -681,8 +684,8 @@
                    </div>
                  </a>
                </div>
-               <div class="col-xs-6">
-                 <a href="javascript:;" class="adapt row-a row">
+               <div class="swiper-col-inner">
+                 <a href="javascript:;">
                    <div class="t">
                      <img src="./image/145916362399792633.webp" alt="" class="opa1">
                      <div class="wrap">
@@ -700,12 +703,20 @@
                      </div>
                    </div>
                  </a>
+               </div>
                </div>
              </div>
            </div>
            <!-- 如果需要分页器 -->
            <div class="swiper-pagination" id="v6-banner-pagination">
            </div>
+         </div>
+
+       </div>
+       <div class="guessulike">
+         <div class="title">
+           <span class="cai-icon"></span>
+           猜你喜欢
          </div>
        </div>
       </div>
